# NotoEngineCore

./: CMakeLists.txt  CMakePresets.json  README.md
shaders/: gradient.comp
